Bug 682741 - About dialog: Properly format and align version number in right-to-left languages. r=Gijs
UltraBlame original commit: 2460ffa59bb61fded60aafdb606b51037e9f3448

--- a/browser/base/content/aboutDialog.css
+++ b/browser/base/content/aboutDialog.css
@@ -133,6 +133,36 @@ text
 ;
 }
 #
+version
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+direction
+:
+ltr
+;
+text
+-
+align
+:
+right
+;
+margin
+-
+right
+:
+0
+;
+}
+#
 distribution
 #
 distributionId
